# label_data

./: .env  .gitignore  .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  python-ci.yml
alembic/: env.py
alembic/versions/: f8410c2d1f28_initial_migration.py
htmlcov/: d_83629464addfe443_main_py.html  d_83629464addfe443_models_py.html  index.html  status.json
label_data/: main.py  models.py
label_data/templates/: finished.html  index.html  upload.html
tests/: test_app.py
