[tool.poetry]
name = "label-data"
version = "0.1.0"
description = ""
authors = ["odd <1161465+oddsun@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "label_data"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
aiofiles = "^23.1.0"
alembic = "^1.10.4"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.12"
pandas = "^2.0.1"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
more-itertools = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
